[gd_scene load_steps=5 format=1]

[ext_resource path="res://dialogue/dialogue_bunyan.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/DejaVuSans/DejaVuSans.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

font/size = 32
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 32
font/font = ExtResource( 2 )

[node name="dialogue" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }

[node name="choice_picker" type="ScrollContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 343.0
margin/top = 653.0
margin/right = 912.0
margin/bottom = 942.0
scroll/horizontal = false
scroll/vertical = false

[node name="sorter" type="Control" parent="choice_picker"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="hero_speech" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 372.0
margin/top = 232.0
margin/right = 798.0
margin/bottom = 625.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.617188, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -4
custom_constants/shadow_as_outline = 16384
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="npc_speech" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 803.0
margin/top = 232.0
margin/right = 1271.0
margin/bottom = 801.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.960938, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -2
custom_constants/shadow_as_outline = 16384
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="bunyan_speech" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 390.0
margin/top = 38.0
margin/right = 858.0
margin/bottom = 607.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.960938, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -2
custom_constants/shadow_as_outline = 16384
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


